--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
+    "include-media": "^1.4.9",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.10.1",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.0"
+    "@types/node-sass": "^4.11.0",
+    "sass-loader": "^8.0.0"
   }
 }
