--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +42,8 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.0",
+    "gh-pages": "^2.1.1",
     "sass-loader": "^8.0.0"
-  }
+  },
+  "homepage": "http://danjun-yor.github.io/memory-game"
 }
