--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
     "include-media": "^1.4.9",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.10.1",
+    "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
     "typescript": "^3.6.3"
