--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
@@ -10,6 +11,7 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "include-media": "^1.4.9",
@@ -18,6 +20,7 @@
     "react": "^16.10.1",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.10.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "typescript": "^3.6.3"
   },
