--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
@@ -15,6 +16,7 @@
     "apollo-boost": "^0.4.7",
     "graphql": "^14.5.8",
     "include-media": "^1.4.9",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.10.1",
